# yahtsee

./: Cargo.toml  README.md  test.html  test_output.html
.github/workflows/: linux.yml
src/: main.rs
