[package]
name = "yahtsee"
version = "0.1.0"
authors = ["Ezra Barrow <bobbybobson4888@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.11.0"
lol_html = "0.2.0"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
